src-ken&y/objects/Item__c.object
<CustomObject>
    <customHelpPage>HelpItems</customHelpPage>
    <description>Item Master object</description>
    <fields>
        <fullName>ABC_Code__c</fullName>
        <description>Priority code that classifies this item by its relative impact on inventory value. A is highest impact; C is lowest impact.  Used primarily for cycle count frequency.</description>
        <inlineHelpText>If you cycle count using the ABC method, you can identify the item as A, B, or C on the Item detail page. To set up the intervals between cycle counts, go to the Company page.</inlineHelpText>
        <label>ABC Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active Item if checked; Used to phase out a item. If item is inactive, a P.O. or W.O. can not be placed against item but the QOH can be used.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aggregation_Days__c</fullName>
        <label>Aggregation Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Supplier_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approved Supplier Item is required in order to buy this item</description>
        <inlineHelpText>For items that you stock, you can require that they come from an approved supplier. Later, when the item is added to a purchase agreement, the system verifies that the supplier is on the approved supplier list.</inlineHelpText>
        <label>Approved Supplier Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buyer_Planner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies principal buyer responsible for purchasing this item or planner responsible for planning orders for the item</description>
        <label>Buyer / Planner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class_Identifier__c</fullName>
        <description>used for data loading to join to Class table</description>
        <label>Class Identifier</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This code is used to group items for control and/or reporting.  Can be used to designate  a group, division, or product line.  Many reports have the option to sort by Class Code.</description>
        <inlineHelpText>Used to group items for control and/or reporting; can be used to designate a group, division, or product line.</inlineHelpText>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Identifier__c</fullName>
        <description>Unique identifier to specify this company for data integrations</description>
        <label>Company Identifier</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Item_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Validate that this Item is unique for this company</description>
        <label>Company Item Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company that controls this item</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Configurable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Configurable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Container_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Container Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Container_Package_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Container Package Class</label>
        <referenceTo>Package_Class__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Container__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Container</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Item description can be up to 255 characters; use extended description field if needed</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dimension_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Items (Dimension UOM)</relationshipLabel>
        <relationshipName>Items_Dimension_UOM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disable_Scan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Scan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOQ__c</fullName>
        <description>Economic Order Quantity: Optimum quantity to make or buy at one time : EOQ is determined by opitmizing the cost incurred to place each order for this item with the carrying cost of holding these items in stock.</description>
        <inlineHelpText>Optimum quantity to make or buy at one time; EOQ is determined by optimizing the cost incurred to place each order with the carrying cost of holding these items in stock.</inlineHelpText>
        <label>EOQ</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Extended_Description__c</fullName>
        <description>Extended Item Description up to 255 Characters; this is in addition to standard description that can be up to 255 characters also.</description>
        <label>Extended Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Source__c</fullName>
        <label>Fulfillment Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inventory</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Drop Ship</fullName>
                </value>
                <value>
                    <fullName>Back To Back</fullName>
                </value>
                <value>
                    <fullName>Build To Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Green__c</fullName>
        <description>Parts that are Green Certified</description>
        <label>Green</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACMI</fullName>
                </value>
                <value>
                    <fullName>Energy Star</fullName>
                </value>
                <value>
                    <fullName>EPEAT</fullName>
                </value>
                <value>
                    <fullName>FSC</fullName>
                </value>
                <value>
                    <fullName>Green Aspects</fullName>
                </value>
                <value>
                    <fullName>GREENGUARD</fullName>
                </value>
                <value>
                    <fullName>GreenSeal</fullName>
                </value>
                <value>
                    <fullName>NONE</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Attribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lists the attributes to be tracked for this item.</description>
        <inlineHelpText>Additional attributes such as expiration date, lot number, and date received.</inlineHelpText>
        <label>Item Attribute</label>
        <referenceTo>Item_Attribute__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Identifier__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The unique identifier for the item.</description>
        <externalId>true</externalId>
        <label>Item Identifier</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <inlineHelpText>The item type is used to drive accounting rules for specific segments such as material or outside processing.</inlineHelpText>
        <label>Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Material</fullName>
                </value>
                <value>
                    <fullName>Outside Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Cycle_Count__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date item was last cycle counted</description>
        <inlineHelpText>Date item was last cycle counted</inlineHelpText>
        <label>Last Cycle Count</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <description>For purchased or outsourced items, the number of mfg days to get item into inventory from the time it&apos;s ordered; for manufactured items, total number mfg days</description>
        <inlineHelpText>For purchased or outsourced items, the number of manufacturing days needed to receive the item into inventory from the time it is ordered; for manufactured items, the total number of days needed to produce the item.</inlineHelpText>
        <label>Lead Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Auto-generated by MRP as first step in MRP run. Buy and outsourced items are level 0; all make items depend on highest BOM assembly level.</description>
        <inlineHelpText>Auto-generated by MRP as first step in MRP run. Items that are purchased (Buy) and outsourced are level 0.</inlineHelpText>
        <label>Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Cycle_Count_Date__c</fullName>
        <description>Date for next cycle based on last cycle count date + number of days corresponding to ABC code from the Company</description>
        <formula>Last_Cycle_Count__c +  IF(  ISPICKVAL( ABC_Code__c , &quot;A&quot;)  ,  Company__r.A_Days__c , if( ISPICKVAL( ABC_Code__c , &quot;B&quot;), Company__r.B_Days__c , Company__r.C_Days__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Cycle Count Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this Item will not be tracked as inventory in the system, used for Expense or Misc items.</description>
        <inlineHelpText>A check mark indicates that the item is be tracked as inventory in the system. Non-inventory items are used for Expense or Misc items.</inlineHelpText>
        <label>Non Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Shippable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, prevents creation of shipment lines for Sales Order Lines that use related Products during Release.</description>
        <label>Non Shippable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ordering_Multiple__c</fullName>
        <description>Ordering multiple is used by MRP in planning orders; for example, if multiple is 25 and the actual demand is 70, then the system will suggest an order of 75</description>
        <inlineHelpText>Used by MRP to plan orders. For example, if the order multiple is 25 and the actual demand is 70, then MRP will suggest an order of 75.</inlineHelpText>
        <label>Ordering Multiple</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_UOM__c</fullName>
        <description>Specify multiple Packaging UOM&apos;s for the Item. Limit 1 Packaging UOM per Packaging class Level</description>
        <inlineHelpText>Specify multiple Packaging UOM&apos;s for the Item. Limit 1 Packaging UOM per Packaging class Level</inlineHelpText>
        <label>Packaging UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Primary Key</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Purchasing_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purchasing Unit of Measure.  Table of acceptable UofM applies.</description>
        <inlineHelpText>When items are received into inventory, if the purchasing UOM is not equal to the stocking UOM, then the conversion factor is used to convert purchased quantities to stocking quantities. The conversion factor information is stored on the UOM page.</inlineHelpText>
        <label>Purchasing UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Items (Purchasing UOM)</relationshipLabel>
        <relationshipName>Items_Purchasing_UOM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Safety_Stock__c</fullName>
        <description>The amount of stock over and above what is forecast to be required so as to provide stock availaility for customer service or other miscellaneous uses not forecast in the Master Plan to the MRP i.e, Buffer stock.</description>
        <inlineHelpText>The amount of stock over and above the forecast that provides a buffer for unanticipated needs.</inlineHelpText>
        <label>Safety Stock</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shrinkage__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The % of an item expected to be unusable or defective. (MRP inflates planned orders to cover shrinkage.) For example, 10 % shrinkage would be entered as 10</description>
        <inlineHelpText>Loss of inventory due to defective or unusable material; expressed as a percentage. MRP inflates the planned orders to cover shrinkage.</inlineHelpText>
        <label>Shrinkage</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <inlineHelpText>The source of the item. Click &quot;Help for this Page&quot; for information about the different item sources in Kenandy.</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Manufactured</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Phantom</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>Kit</fullName>
                </value>
                <value>
                    <fullName>Outside Processing</fullName>
                </value>
                <value>
                    <fullName>One Time Charge</fullName>
                </value>
                <value>
                    <fullName>Build To Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stocking_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stocking Unit of Measure.  Table of acceptable UOM applies. If Purchasing UOM is not = to Stocking UOM  then conversion factor is used to convert purchased quantities to stocking quantities when purchased items are received into Inventory: Quantity from PO x conversion = Stock Quantity</description>
        <inlineHelpText>You can convert item quantities from one unit of measure to another. For example, if you purchase in dozens (DZ) but stock in eaches (EA) you can indicate the UOM information on the Item detail page and Kenandy will do the conversion for you.</inlineHelpText>
        <label>Stocking UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Items (Stocking UOM)</relationshipLabel>
        <relationshipName>Item_Stocking_UOM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to supplier</description>
        <label>Supplier</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Item&apos;s Supplier must be of type Purchase From</errorMessage>
            <filterItems>
                <field>Supplier__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Purchase From</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Items (Supplier)</relationshipLabel>
        <relationshipName>Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Track_Install_Base__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Install Base</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Lot_Sizing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by MRP; if checked (YES) then safety stock, EQO, Order Multiple and shrinkage factor are used when MRP plans orders for this item, if unchecked (NO) then lot for lot technique used for this item.</description>
        <inlineHelpText>Used to inflate the planned requirement to protect against unexpected shortages. If this field is selected, but Safety stock, Shrinkage, EOQ, and the Order Multiple are all &quot;0&quot;, it is equivalent to no lot sizing. No checkmark = lot-for-lot technique.</inlineHelpText>
        <label>Use Lot Sizing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weight_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Unit of measure for the weight of item;  mainly used for shipping purposes</description>
        <label>Weight UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Items (Weight UOM)</relationshipLabel>
        <relationshipName>Items_Weight_UOM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <description>Weight of the item in weight UOM</description>
        <label>Weight</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Stocking_UOM__c</columns>
        <columns>Source__c</columns>
        <columns>Level__c</columns>
        <columns>Company__c</columns>
        <columns>Safety_Stock__c</columns>
        <columns>Shrinkage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Lot_Sizing_Info</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Source__c</columns>
        <columns>ABC_Code__c</columns>
        <columns>Use_Lot_Sizing__c</columns>
        <columns>Safety_Stock__c</columns>
        <columns>EOQ__c</columns>
        <columns>Ordering_Multiple__c</columns>
        <columns>Shrinkage__c</columns>
        <filterScope>Everything</filterScope>
        <label>Lot Sizing Info</label>
    </listViews>
    <nameField>
        <label>Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>NonShippable_Flag_checked_for_Kit</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Source__c , &apos;Kit&apos;) &amp;&amp;  Non_Shippable__c = FALSE</errorConditionFormula>
        <errorMessage>You must select Non Shippable on the Order Management tab for an item with a source set to Kit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_Inventory_Flag_checked</fullName>
        <active>true</active>
        <description>Non Inventory should be checked for Miscellaneous and Expense Items.</description>
        <errorConditionFormula>(ISPICKVAL(Source__c , &apos;Miscellaneous&apos;)  || ISPICKVAL(Source__c , &apos;Expense&apos;))  &amp;&amp;  Non_Inventory__c  = False</errorConditionFormula>
        <errorMessage>Non Inventory should be checked for Miscellaneous and Expense Items</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Range_Validation</fullName>
        <active>true</active>
        <description>Check for the Shrinkage that it is between 0 and 100.</description>
        <errorConditionFormula>OR(Shrinkage__c &lt;0,Shrinkage__c &gt;100)</errorConditionFormula>
        <errorDisplayField>Shrinkage__c</errorDisplayField>
        <errorMessage>Shrinkage should be between 0 and 100.</errorMessage>
    </validationRules>
</CustomObject>